# devops-tcu

./: index.html  sonar-project.properties  styles.css
.github/workflows/: build.yml  gcpvm.yml  main.yml
radar-transparencia/: .env.example  .gitignore  README.md  pyproject.toml
radar-transparencia/agents/: auditor.py  base.py  cartographer.py  miner.py  scout.py
radar-transparencia/agents/prompts/: auditor_prompts.py  cartographer_prompts.py  miner_prompts.py  scout_prompts.py
radar-transparencia/api/: server.py
radar-transparencia/config/: municipios_seed.json  settings.py
radar-transparencia/core/: database.py  logger.py  models.py  state.py
radar-transparencia/dashboard/: app.py
radar-transparencia/extractors/: html_extractor.py  llm_extractor.py  pdf_extractor.py
radar-transparencia/integrations/: cnpj.py  ibge.py  querido_diario.py
radar-transparencia/pipeline/: orchestrator.py  scheduler.py
radar-transparencia/scripts/: run_pipeline.py  seed_municipios.py
radar-transparencia/tests/: test_auditor.py  test_cartographer.py  test_integrations.py  test_miner.py  test_scout.py
